# Vibe-auditer-r00tedbrain

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: windows.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  smoke.rs
src-tauri/src/engine/: api_scan.rs  code_scan.rs  context.rs  db_audit.rs  mod.rs  pdf.rs  ruleset.rs  runner.rs  score.rs  types.rs  util.rs
src-tauri/src/engine/checks/: active_scan.rs  backends.rs  client_side.rs  convex.rs  cookies.rs  cors.rs  deps_cve.rs  exposed_files.rs  fingerprint.rs  headers.rs  injection.rs  mod.rs  secrets.rs  seo.rs  surface.rs  tls.rs
src/components/: CatalogButton.tsx  FindingCard.tsx  NewAuditView.tsx  ReportPdf.tsx  ReportView.tsx  ScoreCard.tsx  SeverityBadge.tsx  Sidebar.tsx  ThemeToggle.tsx
src/lib/: audit.ts  catalog.ts  format.ts  severity.ts  types.ts
