[package]
name = "vibeauditt-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vibeauditt_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "sync"] }
regex = "1.12.4"
scraper = "0.27.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
chrono = { version = "0.4.45", features = ["serde"] }
url = "2.5.8"
uuid = { version = "1.23.3", features = ["v4"] }
futures = "0.3.32"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "charset", "http2"] }
toml = "1.1.2"
tauri-plugin-dialog = "2.7.1"
tokio-postgres = "0.7.18"
postgres-native-tls = "0.5.3"
native-tls = "0.2.18"

